--- a/_posts/2015-01-15-pirates.md
+++ b/_posts/2015-01-15-pirates.md
@@ -1,7 +1,11 @@
 ---
 layout: post
-title: Pirates arrrr
-tags: [pirates, random]
+title: 回首时
+tags:
+  - 空白
+  - 无趣
+published: true
+image: /img/lonliness-2.jpeg
+subtitle: 我已走得太远
 ---
-
-Piracy is typically an act of robbery or criminal violence at sea. The term can include acts committed on land, in the air, or in other major bodies of water or on a shore. It does not normally include crimes committed against persons traveling on the same vessel as the perpetrator (e.g. one passenger stealing from others on the same vessel). The term has been used throughout history to refer to raids across land borders by non-state agents.
+一句话就可以概括的人生，到底还是太过无聊吧。
