test comments func

--- a/_posts/2017-06-18-CCF-ADL.md
+++ b/_posts/2017-06-18-CCF-ADL.md
@@ -207,3 +207,8 @@ Makalu的解决方案：
 ## 持久内存文件系统构建
 
 略
+
+    <!-- UY BEGIN -->
+    <div id="uyan_frame"></div>
+    <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+    <!-- UY END -->
