--- a/Life/2017-05-06-dream.md
+++ b/Life/2017-05-06-dream.md
@@ -74,3 +74,8 @@ image: /img/characters/罗小黑.gif
 迷惑间，梦醒了。我的面前依然是成叠堆积的代码。我参不透这梦的含义，但它着实非常有趣。
 
 我想，我终究还是一个有着冒险梦的男人啊！
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
