--- a/Life/2017-06-04-Rec-9.md
+++ b/Life/2017-06-04-Rec-9.md
@@ -332,3 +332,8 @@ E - “帮助” （真实信息：要拯救军姬）
 大家不要劝我弃剧了。我只是想看一个王国覆灭，或者是涅槃重生的故事而已啊。两者都让我享受，充满愉悦。
 
 所以，一起聊聊吧。如果是你来调整角色，你要选谁，哪些台词和行为，做什么方向调整，你的理由又是什么呢？
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
