--- a/Life/2017-06-11-Rec-10.md
+++ b/Life/2017-06-11-Rec-10.md
@@ -537,3 +537,8 @@ use-site-title: true
 第六，女主会养好身体，成为小米阵营主要战力输出。
 
 全文完。
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
