--- a/Life/2017-06-18-Rec-11.md
+++ b/Life/2017-06-18-Rec-11.md
@@ -631,3 +631,8 @@ A20：因为有梦想谁都了不起，我还敢酒后开飞机
 
 
 **~~全文完~~**
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
