--- a/Life/2017-06-25-Rec-12.md
+++ b/Life/2017-06-25-Rec-12.md
@@ -421,3 +421,8 @@ use-site-title: true
 总之，卡隆和塞蕾嘉的对手戏我是很期待的，如果在正面接触后，在听了塞蕾嘉的说辞后，卡隆仍然选择军姬阵营且无矛盾之处，那么这部剧就可以晋升为“优秀作品”之列了，甚至是“优秀中的优秀”。但这样的期待相当于要将剧情深度拔高到“黑暗骑士归来”的水准，还是很难吧。
 
 全文完。
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
