--- a/_posts/2017-05-14-mother.md
+++ b/_posts/2017-05-14-mother.md
@@ -82,3 +82,9 @@ image: /img/characters/罗小黑.gif
 ![to-be-great]({{site.baseurl}}/img/comics/jinji-1.jpg)
 ![great-mother]({{site.baseurl}}/img/comics/jinji-2.jpg)
 ![great-son]({{site.baseurl}}/img/comics/jinji-3.jpg)
+
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
