--- a/_posts/2017-05-17-rethink.md
+++ b/_posts/2017-05-17-rethink.md
@@ -55,3 +55,8 @@ published: true
 
 ![wind](https://s9.rr.itc.cn/r/wapChange/20173_4_11/a4ct0k0503777043296.png)
 
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
+
